# Streamlit_DataAnalytics_App

./: .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  constants.py  main.py
app/analysis/: base_analyzer.py
app/analysis/clustering/: dbscan.py  hierarchical.py  kmeans.py
app/analysis/conjoint/: conjoint_analyzer.py
app/analysis/correlation/: correlation_matrix.py  pairplot.py
app/analysis/descriptive/: aggregation.py  basic_stats.py  crosstab.py
app/analysis/dimensionality/: correspondence.py  factor_analysis.py  pca.py
app/analysis/hypothesis_testing/: anova.py  chi_square.py  independence_test.py  sample_size.py  t_test.py
app/analysis/regression/: multiple_regression.py  simple_regression.py
app/analysis/specialized/: purchase_log.py  survey_analysis.py
app/analysis/text_analysis/: sentiment.py  topic_modeling.py  word_frequency.py
app/analysis/tree/: decision_tree.py  lightgbm_tree.py
app/auth/: authenticator.py  session_manager.py  session_store.py
app/components/: data_preview.py  file_upload.py
app/data/: loader.py  preprocessor.py  state_manager.py  validator.py
app/page_modules/: analysis.py  data_overview.py  preprocessing.py
app/pages/: analysis.py  settings.py
app/utils/: exceptions.py  export.py  logger.py
data/: README.md  sample_purchase_log.csv  sample_retail_log_1year.csv  sample_survey.csv  sample_text_data.csv
docs/: DEPLOYMENT.md  PRD.md  Revision_history.md  prompt.md
